--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .cnt {
   color: black;
   text-align: center;
-  background-image: url("/assets/bg.jpg");
+  background-image: url(https://th.bing.com/th/id/OIP.VI1nYKfsUJl2-G9eVdSGwwAAAA?rs=1&pid=ImgDetMain);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100vw;
